fix height, overflow

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
   overflow: hidden;
   margin: 0;
   transition: 0.4s ease-out;
@@ -127,6 +127,11 @@ h2 {
 }
 
 @media (max-width: 900px) {
+  body {
+    height: fit-content;
+    overflow: scroll;
+  }
+
   .front {
     text-align: center;
   }
